api spec for all existiong methods
